--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -96,64 +96,25 @@ jobs:
           name: dist-source
           path: dist/
 
-  package-wheel:
-    runs-on: ${{ matrix.os }}
-    strategy:
-      fail-fast: false
-      matrix:
-        include:
-          - os: macos-14
-            arch: arm64
-          - os: macos-13
-            arch: x86_64
-          - os: ubuntu-latest
-            arch: i686
-          - os: ubuntu-latest
-            arch: x86_64
-          - os: ubuntu-24.04-arm
-            arch: aarch64
-          - os: windows-latest
-            arch: AMD64
-          - os: windows-latest
-            arch: x86
+  package-wheel-pyodide:
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v5
         with:
-          python-version: 3.11
-      - name: Build wheels
+          python-version: 3.12
+      - name: Build wheels for Pyodide
         env:
-          CIBW_ARCHS: ${{ matrix.arch }}
+          CIBW_PLATFORM: pyodide
           CIBW_BEFORE_BUILD: python scripts/fetch-vendor.py /tmp/vendor
-          CIBW_BEFORE_BUILD_WINDOWS: python scripts\fetch-vendor.py C:\cibw\vendor
           CIBW_ENVIRONMENT: CFLAGS=-I/tmp/vendor/include LDFLAGS=-L/tmp/vendor/lib
-          CIBW_ENVIRONMENT_WINDOWS: INCLUDE=C:\\cibw\\vendor\\include LIB=C:\\cibw\\vendor\\lib
-          CIBW_SKIP: '*-musllinux* pp*'
-          CIBW_TEST_COMMAND: python -c "import aiortc"
-          # There are no binary wheels for cryptography on 32-bit platforms.
-          CIBW_TEST_SKIP: "*-{manylinux_i686,win32}"
+          CIBW_TEST_SKIP: "*"  # Skip tests for Pyodide builds
         run: |
-          pip install cibuildwheel
+          pip install cibuildwheel>=2.19.0
           cibuildwheel --output-dir dist
         shell: bash
       - name: Upload wheels
         uses: actions/upload-artifact@v4
         with:
-          name: dist-wheel-${{ matrix.os }}-${{ matrix.arch }}
+          name: dist-wheel-pyodide
           path: dist/
-
-  publish:
-    runs-on: ubuntu-latest
-    needs: [lint, test, package-source, package-wheel]
-    steps:
-      - uses: actions/checkout@v4
-      - uses: actions/download-artifact@v4
-        with:
-          merge-multiple: true
-          path: dist/
-      - name: Publish to PyPI
-        if: github.event_name == 'push' && startsWith(github.event.ref, 'refs/tags/')
-        uses: pypa/gh-action-pypi-publish@release/v1
-        with:
-          user: __token__
-          password: ${{ secrets.PYPI_TOKEN }}
