--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -103,16 +103,38 @@ jobs:
       - uses: actions/setup-python@v5
         with:
           python-version: 3.12
+      - name: Install Emscripten
+        uses: mymindstorm/setup-emsdk@v14
+        with:
+          version: '3.1.58'
+      - name: Build WebAssembly dependencies
+        run: |
+          mkdir -p /tmp/wasm-vendor/{include,lib}
+          
+          # Build Opus
+          git clone --depth 1 --branch v1.3.1 https://github.com/xiph/opus.git
+          cd opus
+          ./autogen.sh
+          emconfigure ./configure --prefix=/tmp/wasm-vendor --disable-shared --enable-static
+          emmake make -j4
+          emmake make install
+          cd ..
+          
+          # Build libvpx (if needed)
+          git clone --depth 1 --branch v1.13.1 https://chromium.googlesource.com/webm/libvpx.git
+          cd libvpx
+          emconfigure ./configure --prefix=/tmp/wasm-vendor --disable-examples --disable-tools --disable-docs --disable-unit-tests --enable-static --disable-shared
+          emmake make -j4
+          emmake make install
+          cd ..
       - name: Build wheels for Pyodide
         env:
           CIBW_PLATFORM: pyodide
-          CIBW_BEFORE_BUILD: python scripts/fetch-vendor.py /tmp/vendor
-          CIBW_ENVIRONMENT: CFLAGS=-I/tmp/vendor/include LDFLAGS=-L/tmp/vendor/lib
-          CIBW_TEST_SKIP: "*"  # Skip tests for Pyodide builds
+          CIBW_ENVIRONMENT: CFLAGS="-I/tmp/wasm-vendor/include" LDFLAGS="-L/tmp/wasm-vendor/lib"
+          CIBW_TEST_SKIP: "*"
         run: |
           pip install cibuildwheel>=2.19.0
           cibuildwheel --output-dir dist
-        shell: bash
       - name: Upload wheels
         uses: actions/upload-artifact@v4
         with:
